feat: Complete announcement functionality fix with foreign key bypass
MAJOR FIXES:
- Fixed foreign key constraint violation for demo users
- Backend now checks if user exists in database before setting created_by
- Demo users get created_by=NULL (allowed by schema), real users get UUID
- Fixed priority constraint (changed 'medium' to 'normal')
- Improved success message to be more user-friendly

BACKEND CHANGES (backend-server.js):
- Added user existence check before inserting announcements
- Set created_by to NULL for demo users (not in database)
- Maintain UUID attribution for real users
- Better error handling and logging

FRONTEND CHANGES:
- AnnouncementManager.tsx: Updated priority values, improved success message
- Priority changed from 'medium' to 'normal' (database schema alignment)
- Cleaner success message: 'Your announcement has been published'
- Enhanced error messages for all constraint violations

TEST RESULTS:
-  Demo user announcement creation: SUCCESS
-  API test: Announcement ID 22 created with created_by=NULL
-  No foreign key errors
-  All priority values working (low, normal, high, urgent)
-  Both servers running and tested

DOCUMENTATION:
- Added comprehensive fix reports
- Added testing guides
- Added API test scripts

This fixes the issue where demo users (localStorage only) couldn't create
announcements due to foreign key constraints requiring database user records.

--- a/frontend/login-diagnostic.html
+++ b/frontend/login-diagnostic.html
@@ -232,7 +232,7 @@
             users[email] = {
                 password: password,
                 profile: {
-                    id: 'demo-' + Date.now(),
+                    id: crypto.randomUUID(),
                     email: email,
                     firstName: email.split('@')[0],
                     lastName: 'User',
