--- a/frontend/deep-login-test.html
+++ b/frontend/deep-login-test.html
@@ -275,7 +275,7 @@
             users[email] = {
                 password: password,
                 profile: {
-                    id: 'demo-' + Date.now(),
+                    id: crypto.randomUUID(),
                     email: email,
                     firstName: 'Agil',
                     lastName: 'Pashayev',
